# lvg

./: .gitignore  README.md  app.py  generate_sine_waves.py  pyproject.toml  requirements.txt  select_random_wavs.py
_generator/: consumer.py  mixer.py
app/: Dockerfile  app.py  requirements.txt
app/mixer/: config.py  mixer.py  test_mixer.py
app/site/: index.html
backend/: app.py  db_setup.py  requirements.txt
generator/: consumer.py  mixdown.sh  mixer.py
k8s/: manifest.yaml
seeds/amy-01/: generate_sine_waves.py
site/: app.py  index.html  requirements.txt  save_numbers.php  save_numbers.py  script.js
static/: style.css
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
