[tool.poetry]
name = "live-version-generator"
version = "0.1.0"
description = ""
authors = ["Rory Caraher <caraher.rory@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
